--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zustand-fetching",
-  "version": "1.0.0-beta",
+  "version": "1.0.1-beta",
   "private": false,
   "description": "Zustand fetching helpers",
   "repository": {
@@ -106,5 +106,6 @@
   "engineStrict": true,
   "publishConfig": {
     "homepage": "https://github.com/Hecmatyar/zustand-fetching"
-  }
+  },
+  "license" : "MIT"
 }
