--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,17 @@
 {
   "parser": "@typescript-eslint/parser",
   "extends": [
-    "eslint:recommended", // recommended ESLint rules
-    "plugin:@typescript-eslint/recommended", // recommended rules from @typescript-eslint/eslint-plugin
-    "plugin:prettier/recommended" // Enables eslint-plugin-prettier and eslint-config-prettier. This will display Prettier errors as ESLint errors. Make sure this is always the last configuration in the extends array.
+    "eslint:recommended",
+    // recommended ESLint rules
+    "plugin:@typescript-eslint/recommended",
+    // recommended rules from @typescript-eslint/eslint-plugin
+    "plugin:prettier/recommended"
+    // Enables eslint-plugin-prettier and eslint-config-prettier. This will display Prettier errors as ESLint errors. Make sure this is always the last configuration in the extends array.
   ],
-  "plugins": ["simple-import-sort", "react-hooks"],
+  "plugins": [
+    "simple-import-sort",
+    "react-hooks"
+  ],
   "env": {
     "node": true
   },
@@ -21,8 +27,14 @@
     "simple-import-sort/exports": "error",
     "@typescript-eslint/explicit-module-boundary-types": 0,
     "@typescript-eslint/no-unused-vars": [
-      "error",
-      { "vars": "all", "args": "all", "ignoreRestSiblings": false, "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
+      "warn",
+      {
+        "vars": "all",
+        "args": "all",
+        "ignoreRestSiblings": false,
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+      }
     ],
     "@typescript-eslint/no-empty-interface": "warn"
   }
