--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zustand-fetching",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "private": false,
   "description": "Zustand fetching helpers",
   "repository": {
@@ -53,26 +53,28 @@
   "eslintConfig": {
     "extends": []
   },
-  "dependencies": {},
+  "dependencies": {
+    "nanoid": "^4.0.2"
+  },
   "devDependencies": {
-    "@types/react": "^18.0.15",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "clean-publish": "^4.0.1",
+    "@types/react": "^18.0.33",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "clean-publish": "^4.1.1",
     "del-cli": "^5.0.0",
-    "eslint": "^8.21.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^8.0.3",
     "react": "^18.2.0",
-    "typescript": "^4.7.4",
-    "zustand": "^4.0.0"
+    "lint-staged": "^13.2.1",
+    "prettier": "^2.8.7",
+    "typescript": "^4.9.5",
+    "zustand": "^4.3.7"
   },
   "peerDependencies": {
     "react": ">=17",
