--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zustand-fetching",
-  "version": "1.1.4",
+  "version": "2.0.1",
   "private": false,
   "description": "Zustand fetching helpers",
   "repository": {
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
+    "@types/lodash-es": "^4.17.7",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "clean-publish": "^4.1.1",
@@ -74,11 +75,16 @@
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.7",
     "typescript": "^4.9.5",
-    "zustand": "^4.3.7"
+    "zustand": "^4.3.7",
+    "immer": "^10.0.1",
+    "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
     "react": ">=17",
-    "zustand": ">=4"
+    "zustand": ">=4",
+    "lodash-es": ">=4",
+    "nanoid": ">=4",
+    "immer": ">=10"
   },
   "engines": {
     "node": ">=17",
